Add another Image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h2>Batch - GDSE 57-58</h2>
 <h2>Hello there..!</h2>
 <img src="assets/image/3333.png">
+<img src="assets/image/Home%20Page%202.png" width="300">
 
 
 
