--- a/index.html
+++ b/index.html
@@ -3,16 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>My Profile</title>
+    <meta content="This is my first web page to show my portfolio" name="Dinesh Kosala">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <meta content="width=device-width,initial-scale=1" name="">
+
+    <style></style>
+
 </head>
+
 <body>
+<header>
 
-<h1>Institute of Software Engineering</h1>
-<h2>Batch - GDSE 57-58</h2>
-<h2>Hello there..!</h2>
-<img src="assets/image/3333.png">
-<img src="assets/image/Home%20Page%202.png" width="300">
+    <nev>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#sec01">About</a></li>
+            <li><a href="#sec02">Services</a></li>
+            <li><a href="#sec03">Education</a></li>
+            <li><a href="#sec04">Skills</a></li>
+            <li><a href="#sec05">Projects</a></li>
+            <li><a href="#sec06">Activities</a></li>
+            <li><a href="#sec07">Content</a></li>
+        </ul>
+    </nev>
 
+</header>
 
+<!--Home Page-->
+<section>
+    <section>
+        <h1></h1>
+    </section>
+</section>
 
+<!--About Page-->
+<section></section>
+
+<!--Services Page-->
+<section></section>
+
+<!--Education Page-->
+<section></section>
+
+<!--Skills Page-->
+<section></section>
+
+<!--Projects Page-->
+<section></section>
+
+<!--Activities Page-->
+<section></section>
+
+<!--Content Page-->
+<section></section>
 </body>
 </html>
